# TensorRT

./: .gitignore  CMakeLists.txt  README.md  onnx.patch
custom_torch_plugin/: convert_tensorrt.py  custom_gelu.onnx  custom_gelu.py  format_result.py
custom_torch_plugin/add2/: add2.cpp  add2.cu  add2.h  add2.py  custom_add2.onnx
infer/: CMakeLists.txt  model_infer.cc
plugin/: CMakeLists.txt
plugin/addPlugin/: add2.cu  add2Plugin.cpp  add2Plugin.h
plugin/geluPlugin/: geluPlugin.cpp
